# enterprise-agentic-rag-v2

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
docker/: otel-collector-config.yaml  prometheus.yml
scripts/: ingest.py  init_db.py  make_token.py
src/: __init__.py
src/agents/: graph.py  llm.py  nodes.py  state.py  tools.py
src/api/: main.py  schemas.py
src/auth/: jwt.py
src/evals/: golden_dataset.py  run_retrieval_eval.py
src/observability/: telemetry.py
src/retrieval/: chunking.py  embeddings.py  hybrid.py  rerank.py
src/storage/: db.py  models.py
tests/: conftest.py
tests/unit/: test_chunking.py  test_eval_metrics.py  test_jwt.py  test_rrf.py
